- retrofit module - api key for testing

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,15 @@ accompanist_version = "0.31.5-beta"
 hilt_version = "2.49"
 hilt_navigation = '1.2.0'
 
+#Retrofit
+okhttp = "4.12.0"
+retrofit = "2.9.0"
+
+# Json
+kotlinx-serialization-json = "1.6.3"
+kotlinx-serialization-converter-version = "1.0.0"
+converter_scalar_version = "2.1.0"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -39,6 +48,16 @@ accompanist-navigation-animation = { group = "com.google.accompanist", name = "a
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt_navigation"}
 hilt-dagger = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt_version" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt_version" }
+
+# Retrofit
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+
+# Json
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "kotlinx-serialization-converter-version" }
+converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converter_scalar_version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
