--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,9 @@ kotlinx-serialization-json = "1.6.3"
 kotlinx-serialization-converter-version = "1.0.0"
 converter_scalar_version = "2.1.0"
 
+# Constaint layout
+contrainLayout = "1.1.1"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -58,6 +61,9 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "kotlinx-serialization-converter-version" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converter_scalar_version" }
+
+# Constraint layout
+constraint-layout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "contrainLayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
